--- a/mta.yaml
+++ b/mta.yaml
@@ -11,9 +11,16 @@ modules:
       disk-quota: 512M
       memory: 512M
     requires:
+      - name: ins-gds-gpgdh-cf-uitheme-newpm030
       - name: APP5_destination
       - name: APP5_html5_repo_runtime
       - name: APP5_uaa
+      - name: APP5_connectivity
+    build-parameters:
+      builder: custom
+      commands:
+        - npm install
+        - npm run build:ui --prefix ..
   - name: webapp_deployer
     type: com.sap.application.content
     path: deployer
@@ -37,6 +44,11 @@ modules:
         - npm run build:uimodule --prefix ..
       supported-platforms: []
 resources:
+  - name: ins-gds-gpgdh-cf-uitheme-newpm030
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: theming 
+      service-plan: standard
   - name: APP5_destination
     type: org.cloudfoundry.managed-service
     parameters:
@@ -63,3 +75,8 @@ resources:
       path: ./xs-security.json
       service-plan: application
       service: xsuaa
+  - name: APP5_connectivity
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service-plan: lite
+      service: connectivity
