--- a/uimodule/ui5.yaml
+++ b/uimodule/ui5.yaml
@@ -26,14 +26,9 @@ server:
       configuration:
         debug: true
         port: 1091
-        xsappJson: webapp/xs-app.json
+        xsappJson: ../approuter/xs-app.json
         destinations: 
         - name: "PM030-srv"
-          url: "https://gpgdh-dev-sol-newpm030-pm030-srv.cfapps.eu10.hana.ondemand.com/v2/"
-builder:
-  customTasks:
-    -  name: ui5-task-zipper
-       afterTask: uglify
-       configuration:
-         includeDependencies: false
-         archiveName: uimodule
+          url: "https://gpgdh-dev-sol-newpm030-pm030-srv.cfapps.eu10.hana.ondemand.com/v2/" 
+
+
